--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b6dfcb">  <td>19/10/28 17:04:37</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.CreateNewAddressTestCase@3ffc5af1]">&gt;&gt;Startdriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1887813102</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>19/10/28 17:04:59</td>   <td>22196</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.CreateNewAddressTestCase@3ffc5af1]">&lt;&lt;StopDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1887813102</td>   <td></td> </tr>
-<tr bgcolor="849fce">  <td>19/10/28 17:04:50</td>   <td>12644</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateNewAddressTestCase.UserCanloginSuccessfully()[pri:1, instance:tests.CreateNewAddressTestCase@3ffc5af1]">UserCanloginSuccessfully</td> 
-  <td>main@1887813102</td>   <td></td> </tr>
-<tr bgcolor="849fce">  <td>19/10/28 17:04:55</td>   <td>17692</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateNewAddressTestCase.YourAccount()[pri:2, instance:tests.CreateNewAddressTestCase@3ffc5af1]">YourAccount</td> 
-  <td>main@1887813102</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>19/10/28 17:04:55</td>   <td>17677</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.CreateNewAddressTestCase@3ffc5af1]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@1887813102</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>19/10/28 17:04:59</td>   <td>22069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.CreateNewAddressTestCase@3ffc5af1]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@1887813102</td>   <td></td> </tr>
+<tr bgcolor="e8a876">  <td>19/10/28 22:33:54</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.UserLoginTestCase@46d56d67]">&gt;&gt;Startdriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@333362446</td>   <td></td> </tr>
+<tr bgcolor="e8a876">  <td>19/10/28 22:34:23</td>   <td>28495</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.UserLoginTestCase@46d56d67]">&lt;&lt;StopDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@333362446</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>19/10/28 22:34:12</td>   <td>17635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserLoginTestCase.UserCanloginSuccessfully()[pri:0, instance:tests.UserLoginTestCase@46d56d67]">UserCanloginSuccessfully</td> 
+  <td>main@333362446</td>   <td></td> </tr>
+<tr bgcolor="e8a876">  <td>19/10/28 22:34:20</td>   <td>25459</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserLoginTestCase@46d56d67]">&lt;&lt;WaitAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@333362446</td>   <td></td> </tr>
+<tr bgcolor="e8a876">  <td>19/10/28 22:34:20</td>   <td>25307</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserLoginTestCase@46d56d67]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@333362446</td>   <td></td> </tr>
 </table>
